--- a/documents/ms.tex
+++ b/documents/ms.tex
@@ -267,8 +267,8 @@ estimate of the uncertainty on the rotation period.
 \caption[A light curve with a GP model.]
 {Light curve of KIC 1430163, an active star with a rotation period of $\sim$ 4
 days.
-The blue line shows a fit to the data using
-a Gaussian process model with a QP covariance kernel function.}
+The blue line shows a fit to the data using a Gaussian process model with a QP
+covariance kernel function.}
 \label{fig:GP_example}
 \end{center}
 \end{figure}
