removed --clever=True default; corrected subsampling for aigrain

--- a/notebooks_tdm/summary.ipynb
+++ b/notebooks_tdm/summary.ipynb
@@ -177,6 +177,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.9741824548147182"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.exp(2.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "collapsed": false
